[package]
name = "axum-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
rstest = "0.19.0"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[dev-dependencies]
axum-test = "14.8.0"
pretty_assertions = "1.4.0"
